// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Element with default props 1`] = `
<div
  role="alert"
  style={
    Object {
      "background": "red",
    }
  }
>
  Uh Oh!
</div>
`;

exports[`Custom Element with style props 1`] = `
<div
  style={
    Object {
      "fontSize": "16px",
    }
  }
>
  Hey there!
</div>
`;

exports[`Custom Element with style props 2`] = `
<div
  style={
    Object {
      "fontSize": "12px",
    }
  }
>
  Hey there!
</div>
`;

exports[`Custom Element with style props 3`] = `
<div
  style={
    Object {
      "fontSize": "15px",
    }
  }
>
  Hey there!
</div>
`;
